test/parse/expr/convert-sat-disabled.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func
    f32.const 0
    i32.trunc_s:sat/f32
    drop

    f32.const 0
    i32.trunc_u:sat/f32
    drop

    f64.const 0
    i32.trunc_s:sat/f64
    drop

    f64.const 0
    i32.trunc_u:sat/f64
    drop

    f32.const 0
    i64.trunc_s:sat/f32
    drop

    f32.const 0
    i64.trunc_u:sat/f32
    drop

    f64.const 0
    i64.trunc_s:sat/f64
    drop

    f64.const 0
    i64.trunc_u:sat/f64
    drop))
(;; STDERR ;;;
out/test/parse/expr/convert-sat-disabled.txt:6:5: error: opcode not allowed: i32.trunc_s:sat/f32
    i32.trunc_s:sat/f32
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:10:5: error: opcode not allowed: i32.trunc_u:sat/f32
    i32.trunc_u:sat/f32
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:14:5: error: opcode not allowed: i32.trunc_s:sat/f64
    i32.trunc_s:sat/f64
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:18:5: error: opcode not allowed: i32.trunc_u:sat/f64
    i32.trunc_u:sat/f64
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:22:5: error: opcode not allowed: i64.trunc_s:sat/f32
    i64.trunc_s:sat/f32
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:26:5: error: opcode not allowed: i64.trunc_u:sat/f32
    i64.trunc_u:sat/f32
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:30:5: error: opcode not allowed: i64.trunc_s:sat/f64
    i64.trunc_s:sat/f64
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:34:5: error: opcode not allowed: i64.trunc_u:sat/f64
    i64.trunc_u:sat/f64
    ^^^^^^^^^^^^^^^^^^^
;;; STDERR ;;)
